@@ -6,25 +6,14 @@ var env = {
     //layers:"https://csw.dpaw.wa.gov.au/catalogue/api/records/?format=json&application__name=sss" ,
 
 
-    wfsParams : {
-       version: '1.1.0',
-       service: 'WFS',
-       request: 'GetFeature',
-       outputFormat: 'application/json'
-    },
-
     kmiService:"https://kmi.dbca.wa.gov.au/geoserver",
 
-    gokartService:"",
     resourceTrackingService:"https://resourcetracking-uat.dbca.wa.gov.au",
     bfrsService:"https://bfrs-uat.dbca.wa.gov.au",
     staticService:"https://static.dbca.wa.gov.au",
 
     s3Service:"http://gokart.dpaw.io/",
 
-    appMapping:{
-        sss:"sss_uat",
-    },
     overviewLayer:"dbca:mapbox-outdoors",
 
 }
