@@ -169,17 +169,15 @@
                     var topLeft = vm.map.olmap.getCoordinateFromPixel(browserEvent.pixel.map(function(d){return d - 10}))
                     var bottomRight = vm.map.olmap.getCoordinateFromPixel(browserEvent.pixel.map(function(d){return d + 10}))
 
-                    var bbox = "&bbox=" + bottomRight[1] + "," + topLeft[0] + "," + topLeft[1] + "," + bottomRight[0] + ",urn:ogc:def:crs:EPSG:4326"
+                    var bbox = "bbox=" + bottomRight[1] + "," + topLeft[0] + "," + topLeft[1] + "," + bottomRight[0] + ",urn:ogc:def:crs:EPSG:4326"
                     var url = null
                     if (vm.layer !== vm._featureinfo_layer && vm.layer.tags && vm.layer.tags.some(function(o) {return o.name === "detail_link"} )) {
-                        url = vm.env.kmiService + "/wfs?service=wfs&version=2.0&request=GetFeature&count=1&outputFormat=application%2Fjson&typeNames=" + getDetailLayerId(vm.layer.id) + bbox
+                        params = "count=1&" + bbox
                     } else {
-                        url = vm.env.kmiService + "/wfs?service=wfs&version=2.0&request=GetFeature&outputFormat=application%2Fjson&typeNames=" + getDetailLayerId(vm.layer.id) + bbox
+                        params = bbox
                     }
-                    $.ajax({
-                        url:url,
-                        dataType:"json",
-                        success: function (response, stat, xhr) {
+                    vm.catalogue.getLayer(vm.layer.id).retrieveFeatures(params,
+                        function (response) {
                             if (response.totalFeatures < 1) {
                                 vm.warning = true
                                 return
@@ -265,14 +263,12 @@
                                 })
                             }
                         },
-                        error: function (xhr,status,message) {
+                        function (status,message) {
                             vm.warning = true
-                            alert(xhr.status + " : " + (xhr.responseText || message))
+                            alert(status + " : " + message)
                         },
-                        xhrFields: {
-                            withCredentials: true
-                        }
-                    })
+                        true
+                    )
                     
                     return false
                 }
