@@ -216,7 +216,7 @@
       </div>
     </div>
 
-    <form id="get_weatheroutlook" name="weatheroutlook" action="{{env.gokartService + '/weatheroutlook/html'}}" method="post" target="weatheroutlook">
+    <form id="get_weatheroutlook" name="weatheroutlook" action="{{'/weatheroutlook/html'}}" method="post" target="weatheroutlook">
         <input type="hidden" name="data" id="weatheroutlook_data">
     </form>
   </div>
@@ -1370,7 +1370,7 @@
         var vm = this
         this._datasources = []
         $.ajax({
-            url: vm.env.gokartService + "/outlookmetadata" + (refresh?"?refresh=true":""),
+            url: "/outlookmetadata" + (refresh?"?refresh=true":""),
             method:"GET",
             dataType:"json",
             success: function (response, stat, xhr) {
@@ -1480,7 +1480,7 @@
             } else {
                 try{
                     var req = new window.XMLHttpRequest()
-                    req.open('POST', vm.env.gokartService + "/weatheroutlook/" + format)
+                    req.open('POST', "/weatheroutlook/" + format)
                     req.responseType = 'blob'
                     req.withCredentials = true
                     req.onload = function (event) {
